style-fix: fix catalog visibility bug

--- a/src/app/features/shop/shop.component.scss
+++ b/src/app/features/shop/shop.component.scss
@@ -145,7 +145,9 @@ mat-slider {
     width: 100%;
 
     &._hidden {
-      display: none;  
+      @media (max-width: 480px) {
+        display: none;  
+      }
     }
     
     @media (max-width: 480px) {
